--- a/Shop_api_spu111/Shop_api_spu111.csproj
+++ b/Shop_api_spu111/Shop_api_spu111.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -16,8 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj" />
-    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+    <ProjectReference Include="..\BusinessLogic\Core.csproj" />
+    <ProjectReference Include="..\DataAccess\Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
