--- a/Shop_api_spu111/appsettings.json
+++ b/Shop_api_spu111/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "LocalDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ShopAPI_spu111;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
+
+  "JwtOptions": {
+    "Issuer": "SPU111",
+    "Key": "htjudhru-fhrhr-erugrt",
+    "Lifetime": 10 // minutes
   }
 }
