--- a/Shop_api_spu111/appsettings.json
+++ b/Shop_api_spu111/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "LocalDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ShopAPI_spu111;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
-    "AzureDb": "Server=tcp:vladtestserver.database.windows.net,1433;Initial Catalog=shopapispu111db;Persist Security Info=False;User ID=admin1;Password=Qwer1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "AzureDb": "Server=tcp:vladtestserver.database.windows.net,1433;Initial Catalog=apidbvpd;Persist Security Info=False;User ID=admin1;Password=Qwer1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
   },
   "JwtOptions": {
     "Issuer": "SPU111",
